added my broken exact and approx functions (in my own folder)

--- a/project3/chcharlton/approx.ipynb
+++ b/project3/chcharlton/approx.ipynb
@@ -169,19 +169,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'>seq1': 'aataat', '>seq2': 'aagg', '>seq3': 'acgta', '>seq4': 'agtactac'}\n"
+      "{'>seq1_80': 'ttaacccgtagttgctcttcctccggcgcctgctggcgttctccttttatactcgctcgccgcgagtccctctgctaaaa', '>seq2_80': 'ttggcttcccagtcacccaaaagtcgactcatatcagagaagagtgcaggctcagcgataatgtgatttgtccgtgctct', '>seq3_80': 'gaaggcgtatctacatatagctggcattttgtatgtccttgctaaacagcgagccgacatccagcctcctcgcggtgcct'}\n"
      ]
     }
    ],
    "source": [
-    "seqs = read_fasta('/Users/chcharlton/Aarhus/Spring24/AiB/AiB2024/project3/chcharlton/test_seqs.fasta')\n",
+    "seqs = read_fasta('../testseqs/testseqs_80_3.fasta')\n",
     "print(seqs)"
    ]
   },
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,34 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">seq1 >seq2\n",
-      ">seq1 >seq3\n",
-      ">seq1 >seq4\n",
-      ">seq2 >seq1\n",
-      ">seq2 >seq3\n",
-      ">seq2 >seq4\n",
-      ">seq3 >seq1\n",
-      ">seq3 >seq2\n",
-      ">seq3 >seq4\n",
-      ">seq4 >seq1\n",
-      ">seq4 >seq2\n",
-      ">seq4 >seq3\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'>seq1'"
+       "'>seq3_80'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,16 +274,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'>seq1': 'aataat', '>seq2': 'aagg', '>seq3': 'acgta', '>seq4': 'agtactac'}"
+       "{'>seq1_80': 'ttaacccgtagttgctcttcctccggcgcctgctggcgttctccttttatactcgctcgccgcgagtccctctgctaaaa',\n",
+       " '>seq2_80': 'ttggcttcccagtcacccaaaagtcgactcatatcagagaagagtgcaggctcagcgataatgtgatttgtccgtgctct',\n",
+       " '>seq3_80': 'gaaggcgtatctacatatagctggcattttgtatgtccttgctaaacagcgagccgacatccagcctcctcgcggtgcct'}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,27 +296,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'>seq2': array([['a', 'a', 't', 'a', 'a', 't'],\n",
-       "        ['a', 'a', '-', 'g', 'g', '-']], dtype='<U1'),\n",
-       " '>seq3': array([['a', '-', 'a', 't', 'a', 'a', 't'],\n",
-       "        ['a', 'c', 'g', 't', '-', 'a', '-']], dtype='<U1'),\n",
-       " '>seq4': array([['a', 'a', 't', 'a', '-', '-', 'a', 't'],\n",
-       "        ['a', 'g', 't', 'a', 'c', 't', 'a', 'c']], dtype='<U1')}"
+       "{'>seq1_80': array([['g', 'a', 'a', 'g', 'g', 'c', 'g', 't', 'a', 't', 'c', 't', 'a',\n",
+       "         'c', '-', 'a', 't', 'a', 't', 'a', 'g', 'c', 't', 'g', 'g', 'c',\n",
+       "         'a', '-', 't', 't', '-', 't', 't', 'g', 't', 'a', 't', 'g', 't',\n",
+       "         'c', 'c', 't', 't', 'g', 'c', 't', 'a', 'a', 'a', 'c', 'a', 'g',\n",
+       "         'c', 'g', 'a', 'g', 'c', '-', 'c', 'g', 'a', 'c', 'a', 't', 'c',\n",
+       "         'c', 'a', 'g', 'c', 'c', 't', 'c', 'c', 't', 'c', 'g', 'c', 'g',\n",
+       "         'g', 't', 'g', 'c', 'c', 't'],\n",
+       "        ['t', 'a', 'a', 'c', 'c', 'c', 'g', 't', 'a', 'g', 't', 't', 'g',\n",
+       "         'c', 't', 'c', 't', 't', 'c', 'c', 't', 'c', 'c', 'g', 'g', 'c',\n",
+       "         'g', 'c', 'c', 't', 'g', 'c', 't', 'g', '-', 'g', 'c', 'g', 't',\n",
+       "         't', 'c', 't', 'c', 'c', 't', 't', 't', 't', 'a', 't', 'a', '-',\n",
+       "         'c', 't', 'c', 'g', 'c', 't', 'c', 'g', 'c', 'c', 'g', '-', 'c',\n",
+       "         'g', 'a', 'g', 't', 'c', '-', 'c', 'c', 't', 'c', '-', 't', 'g',\n",
+       "         'c', 't', 'a', 'a', 'a', 'a']], dtype='<U1'),\n",
+       " '>seq2_80': array([['a', 'a', 'g', 'g', 'c', 'g', 't', 'a', 't', 'c', 't', 'a', 'c',\n",
+       "         'a', 't', 'a', 't', 'a', 'g', 'c', 't', 'g', 'g', 'c', 'a', 't',\n",
+       "         't', 't', 't', 'g', '-', 't', '-', 'a', 't', 'g', 't', 'c', 'c',\n",
+       "         't', 't', 'g', 'c', 't', 'a', 'a', 'a', 'c', 'a', 'g', 'c', 'g',\n",
+       "         'a', 'g', 'c', '-', 'c', 'g', 'a', 'c', 'a', 't', 'c', 'c', 'a',\n",
+       "         'g', 'c', 'c', 't', '-', 'c', 'c', 't', 'c', 'g', '-', 'c', 'g',\n",
+       "         'g', 't', 'g', 'c', '-', 'c', 't'],\n",
+       "        ['t', 't', 'g', 'g', 'c', '-', 't', 't', 'c', 'c', 'c', 'a', '-',\n",
+       "         'g', 't', '-', 'c', 'a', 'c', 'c', 'c', 'a', 'a', 'a', 'a', 'g',\n",
+       "         't', 'c', 'g', 'a', 'c', 't', 'c', 'a', 't', 'a', 't', 'c', 'a',\n",
+       "         'g', 'a', 'g', 'a', 'a', 'g', 'a', 'g', 't', '-', 'g', 'c', 'a',\n",
+       "         'g', 'g', 'c', 't', 'c', 'a', 'g', 'c', 'g', '-', 'a', 't', 'a',\n",
+       "         'a', 't', 'g', 't', 'g', 'a', 't', 't', 't', 'g', 't', 'c', 'c',\n",
+       "         'g', 't', 'g', 'c', 't', 'c', 't']], dtype='<U1')}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "generate_alignments(seqs, '>seq1')"
+    "generate_alignments(seqs, '>seq3_80')"
    ]
   },
   {
@@ -344,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,16 +376,19 @@
     "            MA = np.append(MA, np.append(M[:,i], '-')[:, None], axis=1)\n",
     "            # increment i but not j because we are consuming no information from A\n",
     "            i += 1\n",
+    "        \n",
     "    if i < np.shape(M)[1]:\n",
-    "        MA = np.append(MA, np.append(M[:,i:], np.array(['-']*np.shape(A)[0])[:, None], axis=1), axis=1)\n",
+    "    #     MA = np.append(MA, np.append(M[:,i:], np.array(['-']*np.shape(A)[0])[:, None], axis=1), axis=1)\n",
+    "        print(i, np.shape(M)[1])\n",
     "    if j < np.shape(A)[1]:\n",
-    "        MA = np.append(MA, np.append(np.array(['-']*np.shape(M)[0]), A[-1,j:], axis=1), axis=1)\n",
+    "        print(j, np.shape(A)[1])\n",
+    "    #     MA = np.append(MA, np.append(np.array(['-']*np.shape(M)[0]), A[-1,j:], axis=1), axis=1)\n",
     "    return MA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,27 +406,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 84)\n",
+      "(2, 85)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test the get_msa function\n",
+    "alignments = generate_alignments(seqs, '>seq3_80')\n",
+    "for key, value in alignments.items():\n",
+    "    print(value.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "all the input array dimensions except for the concatenation axis must match exactly, but along dimension 0, the array at index 0 has size 3 and the array at index 1 has size 2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[105], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mget_msa\u001b[49m\u001b[43m(\u001b[49m\u001b[43malignments\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[102], line 9\u001b[0m, in \u001b[0;36mget_msa\u001b[0;34m(alignments)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mlist\u001b[39m(alignments\u001b[38;5;241m.\u001b[39mkeys())[\u001b[38;5;241m1\u001b[39m:]:\n\u001b[1;32m      8\u001b[0m     A \u001b[38;5;241m=\u001b[39m alignments[key]\n\u001b[0;32m----> 9\u001b[0m     M \u001b[38;5;241m=\u001b[39m \u001b[43mextend_msa\u001b[49m\u001b[43m(\u001b[49m\u001b[43mM\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mA\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m M\n",
+      "Cell \u001b[0;32mIn[101], line 24\u001b[0m, in \u001b[0;36mextend_msa\u001b[0;34m(M, A)\u001b[0m\n\u001b[1;32m     22\u001b[0m         i \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;241m<\u001b[39m np\u001b[38;5;241m.\u001b[39mshape(M)[\u001b[38;5;241m1\u001b[39m]:\n\u001b[0;32m---> 24\u001b[0m     MA \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m\u001b[43m(\u001b[49m\u001b[43mMA\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m\u001b[43m(\u001b[49m\u001b[43mM\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43mi\u001b[49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m-\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m(\u001b[49m\u001b[43mA\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m j \u001b[38;5;241m<\u001b[39m np\u001b[38;5;241m.\u001b[39mshape(A)[\u001b[38;5;241m1\u001b[39m]:\n\u001b[1;32m     26\u001b[0m     MA \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mappend(MA, np\u001b[38;5;241m.\u001b[39mappend(np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m*\u001b[39mnp\u001b[38;5;241m.\u001b[39mshape(M)[\u001b[38;5;241m0\u001b[39m]), A[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m,j:], axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m), axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/aib/lib/python3.12/site-packages/numpy/lib/function_base.py:5617\u001b[0m, in \u001b[0;36mappend\u001b[0;34m(arr, values, axis)\u001b[0m\n\u001b[1;32m   5615\u001b[0m     values \u001b[38;5;241m=\u001b[39m ravel(values)\n\u001b[1;32m   5616\u001b[0m     axis \u001b[38;5;241m=\u001b[39m arr\u001b[38;5;241m.\u001b[39mndim\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m-> 5617\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mconcatenate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43marr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalues\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maxis\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mValueError\u001b[0m: all the input array dimensions except for the concatenation axis must match exactly, but along dimension 0, the array at index 0 has size 3 and the array at index 1 has size 2"
+     ]
+    }
+   ],
+   "source": [
+    "get_msa(alignments)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "83 84\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([['a', '-', 'a', 't', 'a', '-', '-', 'a', 't'],\n",
-       "       ['a', '-', 'a', '-', 'g', '-', '-', 'g', '-'],\n",
-       "       ['a', 'c', 'g', 't', '-', '-', '-', 'a', '-'],\n",
-       "       ['a', '-', 'g', 't', 'a', 'c', 't', 'a', 'c']], dtype='<U1')"
+       "array([['a', 'a', 'g', 'g', 'c', 'g', 't', 'a', 't', 'c', 't', 'a', 'c',\n",
+       "        'a', '-', 't', 'a', 't', 'a', 'g', 'c', 't', 'g', 'g', 'c', 'a',\n",
+       "        't', '-', 't', 't', '-', 't', 'g', '-', 't', '-', 'a', 't', 'g',\n",
+       "        't', 'c', 'c', 't', 't', 'g', 'c', 't', 'a', 'a', 'a', 'c', 'a',\n",
+       "        'g', 'c', 'g', 'a', 'g', 'c', '-', 'c', '-', 'g', 'a', 'c', 'a',\n",
+       "        't', 'c', 'c', 'a', 'g', 'c', 'c', 't', '-', 'c', 'c', 't', 'c',\n",
+       "        'g', '-', 'c', 'g', 'g', 't', 'g', 'c', '-', 'c', 't'],\n",
+       "       ['t', 't', 'g', 'g', 'c', '-', 't', 't', 'c', 'c', 'c', 'a', '-',\n",
+       "        'g', '-', 't', '-', 'c', 'a', 'c', 'c', 'c', 'a', 'a', 'a', 'a',\n",
+       "        'g', '-', 't', 'c', '-', 'g', 'a', 'c', 't', 'c', 'a', 't', 'a',\n",
+       "        't', 'c', 'a', 'g', 'a', 'g', 'a', 'a', 'g', 'a', 'g', 't', '-',\n",
+       "        'g', 'c', 'a', 'g', 'g', 'c', 't', 'c', '-', 'a', 'g', 'c', 'g',\n",
+       "        '-', 'a', 't', 'a', 'a', 't', 'g', 't', 'g', 'a', 't', 't', 't',\n",
+       "        'g', 't', 'c', 'c', 'g', 't', 'g', 'c', 't', 'c', 't'],\n",
+       "       ['t', 'a', 'a', 'c', 'c', 'c', 'g', 't', 'a', 'g', 't', 't', 'g',\n",
+       "        'c', 't', 'c', 't', 't', 'c', 'c', 't', 'c', 'c', 'g', 'g', 'c',\n",
+       "        'g', 'c', 'c', 't', 'g', 'c', 't', '-', 'g', '-', '-', 'g', 'c',\n",
+       "        'g', 't', 't', 'c', 't', 'c', 'c', 't', 't', 't', 't', 'a', 't',\n",
+       "        'a', '-', 'c', 't', 'c', 'g', '-', 'c', 't', 'c', 'g', 'c', 'c',\n",
+       "        'g', '-', 'c', 'g', 'a', 'g', 't', 'c', '-', '-', 'c', 'c', 't',\n",
+       "        'c', '-', '-', 't', 'g', 'c', 't', 'a', '-', 'a', 'a']],\n",
+       "      dtype='<U1')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# test the get_msa function\n",
-    "alignments = generate_alignments(seqs, '>seq1')\n",
-    "get_msa(alignments)\n"
+    "# test the extend_msa function\n",
+    "A = alignments['>seq1_80']\n",
+    "M = alignments['>seq2_80']\n",
+    "# print(len(M))\n",
+    "# print(len(A))\n",
+    "extend_msa(M, A)"
    ]
   },
   {
