fix bug in henry/nj.py that was causing large rf distances

--- a/project5/henry/nj.ipynb
+++ b/project5/henry/nj.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,15 +28,13 @@
     "        line = line.strip().split()\n",
     "        taxa.append(line[0])\n",
     "        dist_mat.append([float(x) for x in line[1:]])\n",
-    "    # make the alphabet lowercase\n",
-    "    taxa = [x.lower() for x in taxa]\n",
     "    return gap_cost, taxa, np.array(dist_mat)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -198,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -266,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -349,12 +347,12 @@
       " [-0.32666667 -0.29333333  0.         -0.29333333 -0.36666667]\n",
       " [-0.31333333 -0.38       -0.29333333  0.         -0.29333333]\n",
       " [-0.32666667 -0.29333333 -0.36666667 -0.29333333  0.        ]]\n",
-      "['b', 'd']\n",
+      "['B', 'D']\n",
       "[[ 0.   -0.27 -0.27 -0.3 ]\n",
       " [-0.27  0.   -0.3  -0.27]\n",
       " [-0.27 -0.3   0.   -0.27]\n",
       " [-0.3  -0.27 -0.27  0.  ]]\n",
-      "['c', 'e']\n"
+      "['C', 'E']\n"
      ]
     }
    ],
@@ -365,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -387,93 +385,93 @@
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"99\" cy=\"-192\" rx=\"53.89\" ry=\"18\"/>\n",
        "<text text-anchor=\"middle\" x=\"99\" y=\"-188.3\" font-family=\"Times,serif\" font-size=\"14.00\">pseudo_root</text>\n",
        "</g>\n",
-       "<!-- a -->\n",
+       "<!-- A -->\n",
        "<g id=\"node2\" class=\"node\">\n",
-       "<title>a</title>\n",
+       "<title>A</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"27\" cy=\"-105\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"27\" y=\"-101.3\" font-family=\"Times,serif\" font-size=\"14.00\">a</text>\n",
+       "<text text-anchor=\"middle\" x=\"27\" y=\"-101.3\" font-family=\"Times,serif\" font-size=\"14.00\">A</text>\n",
        "</g>\n",
-       "<!-- pseudo_root&#45;&gt;a -->\n",
+       "<!-- pseudo_root&#45;&gt;A -->\n",
        "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>pseudo_root&#45;&gt;a</title>\n",
+       "<title>pseudo_root&#45;&gt;A</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M81.74,-174.75C75.91,-169 69.5,-162.38 64,-156 56.99,-147.86 49.84,-138.5 43.72,-130.1\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"46.43,-127.87 37.76,-121.77 40.74,-131.94 46.43,-127.87\"/>\n",
        "<text text-anchor=\"middle\" x=\"79.5\" y=\"-144.8\" font-family=\"Times,serif\" font-size=\"14.00\">0.080</text>\n",
        "</g>\n",
-       "<!-- bd -->\n",
+       "<!-- BD -->\n",
        "<g id=\"node3\" class=\"node\">\n",
-       "<title>bd</title>\n",
+       "<title>BD</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"99\" cy=\"-105\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"99\" y=\"-101.3\" font-family=\"Times,serif\" font-size=\"14.00\">bd</text>\n",
+       "<text text-anchor=\"middle\" x=\"99\" y=\"-101.3\" font-family=\"Times,serif\" font-size=\"14.00\">BD</text>\n",
        "</g>\n",
-       "<!-- pseudo_root&#45;&gt;bd -->\n",
+       "<!-- pseudo_root&#45;&gt;BD -->\n",
        "<g id=\"edge2\" class=\"edge\">\n",
-       "<title>pseudo_root&#45;&gt;bd</title>\n",
+       "<title>pseudo_root&#45;&gt;BD</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M99,-173.8C99,-162.16 99,-146.55 99,-133.24\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"102.5,-133.18 99,-123.18 95.5,-133.18 102.5,-133.18\"/>\n",
        "<text text-anchor=\"middle\" x=\"114.5\" y=\"-144.8\" font-family=\"Times,serif\" font-size=\"14.00\">0.050</text>\n",
        "</g>\n",
-       "<!-- ce -->\n",
+       "<!-- CE -->\n",
        "<g id=\"node4\" class=\"node\">\n",
-       "<title>ce</title>\n",
+       "<title>CE</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"171\" cy=\"-105\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"171\" y=\"-101.3\" font-family=\"Times,serif\" font-size=\"14.00\">ce</text>\n",
+       "<text text-anchor=\"middle\" x=\"171\" y=\"-101.3\" font-family=\"Times,serif\" font-size=\"14.00\">CE</text>\n",
        "</g>\n",
-       "<!-- pseudo_root&#45;&gt;ce -->\n",
+       "<!-- pseudo_root&#45;&gt;CE -->\n",
        "<g id=\"edge3\" class=\"edge\">\n",
-       "<title>pseudo_root&#45;&gt;ce</title>\n",
+       "<title>pseudo_root&#45;&gt;CE</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M116.26,-174.75C122.09,-169 128.5,-162.38 134,-156 141.01,-147.86 148.16,-138.5 154.28,-130.1\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"157.26,-131.94 160.24,-121.77 151.57,-127.87 157.26,-131.94\"/>\n",
        "<text text-anchor=\"middle\" x=\"160.5\" y=\"-144.8\" font-family=\"Times,serif\" font-size=\"14.00\">0.030</text>\n",
        "</g>\n",
-       "<!-- b -->\n",
+       "<!-- B -->\n",
        "<g id=\"node5\" class=\"node\">\n",
-       "<title>b</title>\n",
+       "<title>B</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"27\" cy=\"-18\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"27\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">b</text>\n",
+       "<text text-anchor=\"middle\" x=\"27\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">B</text>\n",
        "</g>\n",
-       "<!-- bd&#45;&gt;b -->\n",
+       "<!-- BD&#45;&gt;B -->\n",
        "<g id=\"edge4\" class=\"edge\">\n",
-       "<title>bd&#45;&gt;b</title>\n",
+       "<title>BD&#45;&gt;B</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M83.85,-89.82C77.5,-83.63 70.17,-76.16 64,-69 56.99,-60.86 49.84,-51.5 43.72,-43.1\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"46.43,-40.87 37.76,-34.77 40.74,-44.94 46.43,-40.87\"/>\n",
        "<text text-anchor=\"middle\" x=\"79.5\" y=\"-57.8\" font-family=\"Times,serif\" font-size=\"14.00\">0.100</text>\n",
        "</g>\n",
-       "<!-- d -->\n",
+       "<!-- D -->\n",
        "<g id=\"node6\" class=\"node\">\n",
-       "<title>d</title>\n",
+       "<title>D</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"99\" cy=\"-18\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"99\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">d</text>\n",
+       "<text text-anchor=\"middle\" x=\"99\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">D</text>\n",
        "</g>\n",
-       "<!-- bd&#45;&gt;d -->\n",
+       "<!-- BD&#45;&gt;D -->\n",
        "<g id=\"edge5\" class=\"edge\">\n",
-       "<title>bd&#45;&gt;d</title>\n",
+       "<title>BD&#45;&gt;D</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M99,-86.8C99,-75.16 99,-59.55 99,-46.24\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"102.5,-46.18 99,-36.18 95.5,-46.18 102.5,-46.18\"/>\n",
        "<text text-anchor=\"middle\" x=\"114.5\" y=\"-57.8\" font-family=\"Times,serif\" font-size=\"14.00\">0.070</text>\n",
        "</g>\n",
-       "<!-- c -->\n",
+       "<!-- C -->\n",
        "<g id=\"node7\" class=\"node\">\n",
-       "<title>c</title>\n",
+       "<title>C</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"171\" cy=\"-18\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"171\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">c</text>\n",
+       "<text text-anchor=\"middle\" x=\"171\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">C</text>\n",
        "</g>\n",
-       "<!-- ce&#45;&gt;c -->\n",
+       "<!-- CE&#45;&gt;C -->\n",
        "<g id=\"edge6\" class=\"edge\">\n",
-       "<title>ce&#45;&gt;c</title>\n",
+       "<title>CE&#45;&gt;C</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M171,-86.8C171,-75.16 171,-59.55 171,-46.24\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"174.5,-46.18 171,-36.18 167.5,-46.18 174.5,-46.18\"/>\n",
        "<text text-anchor=\"middle\" x=\"186.5\" y=\"-57.8\" font-family=\"Times,serif\" font-size=\"14.00\">0.050</text>\n",
        "</g>\n",
-       "<!-- e -->\n",
+       "<!-- E -->\n",
        "<g id=\"node8\" class=\"node\">\n",
-       "<title>e</title>\n",
+       "<title>E</title>\n",
        "<ellipse fill=\"none\" stroke=\"black\" cx=\"243\" cy=\"-18\" rx=\"27\" ry=\"18\"/>\n",
-       "<text text-anchor=\"middle\" x=\"243\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">e</text>\n",
+       "<text text-anchor=\"middle\" x=\"243\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">E</text>\n",
        "</g>\n",
-       "<!-- ce&#45;&gt;e -->\n",
+       "<!-- CE&#45;&gt;E -->\n",
        "<g id=\"edge7\" class=\"edge\">\n",
-       "<title>ce&#45;&gt;e</title>\n",
+       "<title>CE&#45;&gt;E</title>\n",
        "<path fill=\"none\" stroke=\"black\" d=\"M186.15,-89.82C192.5,-83.63 199.83,-76.16 206,-69 213.01,-60.86 220.16,-51.5 226.28,-43.1\"/>\n",
        "<polygon fill=\"black\" stroke=\"black\" points=\"229.26,-44.94 232.24,-34.77 223.57,-40.87 229.26,-44.94\"/>\n",
        "<text text-anchor=\"middle\" x=\"232.5\" y=\"-57.8\" font-family=\"Times,serif\" font-size=\"14.00\">0.060</text>\n",
@@ -482,10 +480,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1140c94c0>"
+       "<graphviz.graphs.Digraph at 0x115ee4770>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,16 +494,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'(a:0.080,(b:0.100,d:0.070):0.050,(c:0.050,e:0.060):0.030);'"
+       "'(A:0.080,(B:0.100,D:0.070):0.050,(C:0.050,E:0.060):0.030);'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,14 +516,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['a', 'b', 'c', 'd', 'e']\n",
+      "['A', 'B', 'C', 'D', 'E']\n",
       "[[0.   0.   0.   0.   0.  ]\n",
       " [0.23 0.   0.   0.   0.  ]\n",
       " [0.16 0.23 0.   0.   0.  ]\n",
@@ -540,7 +538,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[45], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(np\u001b[38;5;241m.\u001b[39mtril(D))\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# convert the distance matrix to a biopython distance matrix\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m biopython_D \u001b[38;5;241m=\u001b[39m \u001b[43mDistanceMatrix\u001b[49m\u001b[43m(\u001b[49m\u001b[43mS\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtril\u001b[49m\u001b[43m(\u001b[49m\u001b[43mD\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtolist\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[28], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(np\u001b[38;5;241m.\u001b[39mtril(D))\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# convert the distance matrix to a biopython distance matrix\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m biopython_D \u001b[38;5;241m=\u001b[39m \u001b[43mDistanceMatrix\u001b[49m\u001b[43m(\u001b[49m\u001b[43mS\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtril\u001b[49m\u001b[43m(\u001b[49m\u001b[43mD\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtolist\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/opt/anaconda3/envs/aib/lib/python3.12/site-packages/Bio/Phylo/TreeConstruction.py:318\u001b[0m, in \u001b[0;36mDistanceMatrix.__init__\u001b[0;34m(self, names, matrix)\u001b[0m\n\u001b[1;32m    316\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, names, matrix\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m    317\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Initialize the class.\"\"\"\u001b[39;00m\n\u001b[0;32m--> 318\u001b[0m     \u001b[43m_Matrix\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnames\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmatrix\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    319\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_set_zero_diagonal()\n",
       "File \u001b[0;32m~/opt/anaconda3/envs/aib/lib/python3.12/site-packages/Bio/Phylo/TreeConstruction.py:119\u001b[0m, in \u001b[0;36m_Matrix.__init__\u001b[0;34m(self, names, matrix)\u001b[0m\n\u001b[1;32m    117\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmatrix \u001b[38;5;241m=\u001b[39m matrix\n\u001b[1;32m    118\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 119\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmatrix\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m should be in lower triangle format\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    120\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    121\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnames\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m and \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmatrix\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m should be the same size\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[0;31mValueError\u001b[0m: 'matrix' should be in lower triangle format"
@@ -560,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
